--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <![endif]-->
   </head>
   <body class="container">
-    <h1>KnowledgeLinks.io <small>coming soon!</small></h1>
+<img style="float:left;height:64px;padding-top:5px;padding-right:10px;" src="./images/KL-logo-blue.png">    
+<h1>KnowledgeLinks.io <small>coming soon!</small></h1>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
