--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body class="container">
 <img style="float:left;height:64px;padding-top:5px;padding-right:10px;" src="./images/KL-logo-blue.png">    
 <h1>KnowledgeLinks.io <small>coming soon!</small></h1>
-
+<img src="./images/alt-logo.svg" alt="alternative logo">
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
