Cleaned up index code formatting

--- a/index.html
+++ b/index.html
@@ -19,16 +19,18 @@
     <![endif]-->
   </head>
   <body class="container">
-<!-- <img style="float:left;height:64px;padding-top:5px;padding-right:10px;" src="./images/KL-logo-blue.png">   --> 
-<img src="./images/alt-logo.svg" 
-     alt="alternative logo"
-     style="float:left;height:100px;padding-top:5px;padding-right:10px;">
 
-<h1>KnowledgeLinks.io <small>coming soon!</small></h1>
-<!-- <img src="./images/alt-logo.svg" alt="alternative logo"> -->
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
+		<img src="./images/alt-logo.svg" 
+		     alt="alternative logo"
+		     style="float:left;height:100px;padding-top:5px;padding-right:10px;">
+	
+		<h1>KnowledgeLinks.io <small>coming soon!</small></h1>
+
+		<!-- Scripts ---------------------------------------->
+	    
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<!-- Include all compiled plugins (below), or include individual files as needed -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
   </body>
 </html>
