--- a/presentations/niso-2015/index.html
+++ b/presentations/niso-2015/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>KnowledgeLinks.io</title>
+    <title>KnowledgeLinks.io 
+NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
+</title>
 
     <!-- Bootstrap -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
@@ -19,27 +21,52 @@
     <![endif]-->
   </head>
   <body class="container">
-<!-- <img style="float:left;height:64px;padding-top:5px;padding-right:10px;" src="./images/KL-logo-blue.png">   --> 
-<img src="../../images/alt-logo.svg" 
+  
+  <img src="../images/alt-logo.svg" 
      alt="alternative logo"
      style="float:left;height:100px;padding-top:5px;padding-right:10px;">
 
-<h2>KnowledgeLinks.io</h2>
-<h1><small>NISO/NFAIS Virtual Conference</small><br>The Semantic Web: What's New and Cool</h1>
+ <h1>KnowledgeLinks.io <small>Presentations</small></h1>
+ 
+ 
+<div class="row">
+ <section class="col-md-11 pull-left">
+  <div class="jumbotron">
+   <h2><small>NISO/NFAIS Virtual Conference The Semantic Web: What's New and Cool</small></h2>
+   <h1 itemprop="https://schema.org/name">Implementing a BIBFRAME Catalog</h1>
+  </div>
+ </section>
+</div>
 <div class="row">
   <section class="col-md-6">
     
-    <p class="lead">
-    <strong>Dr. Mike Stabile</strong><br>
-    CEO, Knowledgelinks.io</p>
+    <p class="lead" itemtype="https://schema.org/Person">
+    <strong itemprop="https://schema.org/name">Dr. Mike Stabile</strong><br>
+    President, Knowledgelinks.io</p>
   </section>
   <section class="col-md-6">
-    <p class="lead">
-    <strong>Jeremy Nelson</strong><br>
+    <p class="lead" itemtype="https://schema.org/Person">
+    <strong itemprop="https://schema.org/name">Jeremy Nelson</strong><br>
     Metadata and Systems Librarian, Colorado College<br>
     CIO, Knowledgelinks.io</p>
   </section>
 </div>
+
+
+<div class="btn-group pull-right" role="group" aria-label="...">
+  <a href="" 
+     type="button" class="btn btn-warning btn-lg">
+     <span class="glyphicon glyphicon-chevron-left"></span>
+     Previous</a>
+  <button type="button" class="btn btn-default btn-lg">
+    <span class="glyphicon glyphicon-home"></span>
+  </button>
+  <a href="about.html" type="button" 
+     class="btn btn-primary btn-lg">Next
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
+
 <!-- <img src="./images/alt-logo.svg" alt="alternative logo"> -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
