Added html for NISO presentation

--- a/presentations/niso-2015/bibframe-overview.html
+++ b/presentations/niso-2015/bibframe-overview.html
@@ -29,28 +29,8 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
  <h1>KnowledgeLinks.io <small>Presentations</small></h1>
  
  
-<div class="row">
- <section class="col-md-11 pull-left">
-  <div class="jumbotron">
-   <h2><small>NISO/NFAIS Virtual Conference The Semantic Web: What's New and Cool</small></h2>
-   <h1 itemprop="https://schema.org/name">Implementing a BIBFRAME Catalog</h1>
-  </div>
- </section>
-</div>
-<div class="row">
-  <section class="col-md-6">
-    
-    <p class="lead" itemtype="https://schema.org/Person">
-    <strong itemprop="https://schema.org/name">Dr. Mike Stabile</strong><br>
-    President, Knowledgelinks.io</p>
-  </section>
-  <section class="col-md-6">
-    <p class="lead" itemtype="https://schema.org/Person">
-    <strong itemprop="https://schema.org/name">Jeremy Nelson</strong><br>
-    Metadata and Systems Librarian, Colorado College<br>
-    CIO, Knowledgelinks.io</p>
-  </section>
-</div>
+<h1>BIBFRAME RDF Vocabulary</h1>
+
 
 
 <div class="btn-group pull-right" role="group" aria-label="...">
