--- a/presentations/niso-2015/bibframe-overview.html
+++ b/presentations/niso-2015/bibframe-overview.html
@@ -26,7 +26,7 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
      alt="alternative logo"
      style="float:left;height:100px;padding-top:5px;padding-right:10px;">
 
- <h1>KnowledgeLinks.io <small>Presentations</small></h1>
+ <h3>KnowledgeLinks.io <small>Presentations</small></h3>
  
  
 <h1>BIBFRAME RDF Vocabulary</h1>
@@ -34,7 +34,7 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
 
 
 <div class="btn-group pull-right" role="group" aria-label="...">
-  <a href="" 
+  <a href="index.html" 
      type="button" class="btn btn-warning btn-lg">
      <span class="glyphicon glyphicon-chevron-left"></span>
      Previous</a>
@@ -46,10 +46,18 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
      Slides <span class="caret"></span>
      </button>
      <ul class="dropdown-menu">
-        <li><a href="bibframe-overview.html">BIBFRAME Vocabulary</a></li>
+      <li><a href="bibframe-overview.html">BIBFRAME Vocabulary</a></li>
+      <li><a href="bibcat.html">BIBCAT - BIBFRAME Catalog</a></li>
+      <li><a href="bibframe-2.0.html">BIBFRAME 2.0</a></li>
+      <li class="divider"></li>
+      <li>&nbsp;BIBFRAME Triplestore &amp; Search</li>
+      <li><a href="languages.html">Languages</a></li>
+      <li><a href="identifiers.html">Identifiers</a></li>
+      <li><a href="sparql.html">SPARQL Examples</a></li>
+      <li><a href="summary.html">Summary</a></li> 
      </ul>
   </div>
-    <a href="about.html" type="button" 
+    <a href="bibcat.html" type="button" 
      class="btn btn-primary btn-lg">Next
     <span class="glyphicon glyphicon-chevron-right"></span>
   </a>
