--- a/presentations/niso-2015/summary.html
+++ b/presentations/niso-2015/summary.html
@@ -30,31 +30,20 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
  
  
 <div class="row">
- <section class="col-md-11 pull-left">
-  <div class="jumbotron">
-   <h2><small>NISO/NFAIS Virtual Conference The Semantic Web: What's New and Cool</small></h2>
-   <h1 itemprop="https://schema.org/name">Implementing a BIBFRAME Catalog</h1>
-  </div>
- </section>
-</div>
-<div class="row">
-  <section class="col-md-6">
-    
-    <p class="lead" itemtype="https://schema.org/Person">
-    <strong itemprop="https://schema.org/name">Dr. Mike Stabile</strong><br>
-    President, Knowledgelinks.io</p>
+ <div class="col-md-8">
+  <section class="jumbotron">
+   <h2 class="text-danger">BIBFRAME Triplestore &amp; Search</h2>
+   <h1>
+Summary
+</h1>
   </section>
-  <section class="col-md-6">
-    <p class="lead" itemtype="https://schema.org/Person">
-    <strong itemprop="https://schema.org/name">Jeremy Nelson</strong><br>
-    Metadata and Systems Librarian, Colorado College<br>
-    CIO, Knowledgelinks.io</p>
-  </section>
+ </div>
 </div>
+ 
 
 
 <div class="btn-group pull-right" role="group" aria-label="...">
-  <a href="" 
+  <a href="identifiers.html" 
      type="button" class="btn btn-warning btn-lg">
      <span class="glyphicon glyphicon-chevron-left"></span>
      Previous</a>
@@ -77,7 +66,7 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
       <li><a href="summary.html">Summary</a></li> 
      </ul>
   </div>
-    <a href="bibframe-overview.html" type="button" 
+    <a href="index.html" type="button" 
      class="btn btn-primary btn-lg">Next
     <span class="glyphicon glyphicon-chevron-right"></span>
   </a>
