--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
      alt="alternative logo"
      style="float:left;height:100px;padding-top:5px;padding-right:10px;">
 
-<h1>KnowledgeLinks.io <small>coming soon!</small></h1>
+<h1>KnowledgeLinks.io <small><a href="mailto:knowledgelinks.io@gmail.com">email</a></small></h1>
+
 <!-- <img src="./images/alt-logo.svg" alt="alternative logo"> -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
