--- a/presentations/niso-2015/bibcat.html
+++ b/presentations/niso-2015/bibcat.html
@@ -4,10 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+  <meta property="og:title" content="Implementing a BIBFRAME Catalog" />
+  <meta property="og:type" content="article" />
+  <meta property="og:article:author" content="Jeremy Nelson" />
+  <meta property="og:article:author" content="Mike Stabile" />
+  <meta property="og:article:published_time" content="2015-12-2" />
+
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>KnowledgeLinks.io 
 NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
 </title>
+    <script defer async src="//hypothes.is/embed.js"></script> 
 
     <!-- Bootstrap -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
@@ -30,6 +38,26 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
  
  
 <h1>BIBCAT - BIBFRAME Catalog</h1>
+<h2>BIBFRAME Search &amp; Display System <small>Iteration 1</small></h2>
+<div class="row">
+ <section class="col-md-6">
+    <p class="lead">In the fall of 2014, Aaron Schmidt of Influx Library User Interface Design and I were
+         awarded a contract with the Library of Congress for a <b>BIBFRAME Search and Display Systems</b>
+         that resulted in <a href="http://bibcat.org">BIBCAT</a> - a BIBFRAME Catalog - a lightweight catalog web application that
+         uses the backend BIBFRAME Datastore. Check out the current pilot that is loaded with sample datasets from the 
+         Library of Congress (original records were generated from MARC records related to the subjects, "Mark Twain" and "Bible").
+  </p>
+ </section>
+ <section class="col-md-6">
+   <img src="/images/bibcat-v.5.png" class="img-thumbnail">
+ </section>
+</div>
+<hr>
+<h2>BIBCAT <small>Iteration 2</small></h2>
+<p class="lead">Single Page App, Docker Environment, &amp; Kibana Reporting and Visualization</p>
+<h3><a href="http://bibcat.org" >Current BIBCAT</a></h3>
+<h3>Docker Environment</h3>
+<img src="/images/semantic-server-docker-env.svg" style="width:500px;height:auto">
 
 
 
@@ -51,6 +79,7 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
       <li><a href="bibframe-2.0.html">BIBFRAME 2.0</a></li>
       <li class="divider"></li>
       <li>&nbsp;BIBFRAME Triplestore &amp; Search</li>
+      <li><a href="rdf.html">RDF</a></li>
       <li><a href="languages.html">Languages</a></li>
       <li><a href="identifiers.html">Identifiers</a></li>
       <li><a href="sparql.html">SPARQL Examples</a></li>
@@ -63,6 +92,7 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
   </a>
 </div>
 
+ <a class="lead" href="mailto:knowledgelinks.io@gmail.com">contact</a>
 <!-- <img src="./images/alt-logo.svg" alt="alternative logo"> -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
