--- a/presentations/niso-2015/bibframe-2.0.html
+++ b/presentations/niso-2015/bibframe-2.0.html
@@ -4,10 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+  <meta property="og:title" content="Implementing a BIBFRAME Catalog" />
+  <meta property="og:type" content="article" />
+  <meta property="og:article:author" content="Jeremy Nelson" />
+  <meta property="og:article:author" content="Mike Stabile" />
+  <meta property="og:article:published_time" content="2015-12-2" />
+
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>KnowledgeLinks.io 
 NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
 </title>
+    <script defer async src="//hypothes.is/embed.js"></script> 
 
     <!-- Bootstrap -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
@@ -51,6 +59,7 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
       <li><a href="bibframe-2.0.html">BIBFRAME 2.0</a></li>
       <li class="divider"></li>
       <li>&nbsp;BIBFRAME Triplestore &amp; Search</li>
+      <li><a href="rdf.html">RDF</a></li>
       <li><a href="languages.html">Languages</a></li>
       <li><a href="identifiers.html">Identifiers</a></li>
       <li><a href="sparql.html">SPARQL Examples</a></li>
@@ -63,6 +72,7 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
   </a>
 </div>
 
+ <a class="lead" href="mailto:knowledgelinks.io@gmail.com">contact</a>
 <!-- <img src="./images/alt-logo.svg" alt="alternative logo"> -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
