--- a/presentations/niso-2015/languages.html
+++ b/presentations/niso-2015/languages.html
@@ -4,10 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+  <meta property="og:title" content="Implementing a BIBFRAME Catalog" />
+  <meta property="og:type" content="article" />
+  <meta property="og:article:author" content="Jeremy Nelson" />
+  <meta property="og:article:author" content="Mike Stabile" />
+  <meta property="og:article:published_time" content="2015-12-2" />
+
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>KnowledgeLinks.io 
 NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
 </title>
+    <script defer async src="//hypothes.is/embed.js"></script> 
 
     <!-- Bootstrap -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
@@ -38,14 +46,105 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
  </div>
 </div>
  
-<p class="lead">
+<div id="lang-carousel" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="lang-carousel" data-slide-to="0" class="active"></li>
+    <li data-target="lang-carousel" data-slide-to="1"></li>
+    <li data-target="lang-carousel" data-slide-to="2"></li>
+    <li data-target="lang-carousel" data-slide-to="3"></li>
+
+  </ol>
+  <div class="carousel-inner" role="listbox">
  
+    <div class="item active">
+     <div class="row">
+       <div class="col-md-8 col-md-offset-2">
+        <div class="panel panel-default">
+ <div class="panel-body">
+  <h2>Case Study: Looking at the "English Language"</h2>
+  <p class="lead"> 
+   How is "English" used in catalog systems?
+  </p>
+  <ul class="lead">
+    <li>as a Subject/Topic: <em>A book written about the English Language</em></li>
+    <li>the Language of production: <em>A book written in english</em></li>
+    <li>A description of the catalog system language: <em>A comment written in english</em></li>
+    <li>Primary language of an author</li>
+    <li>Language of a region or country</li>
+  </ul>
+  <p class="lead">
+    In a classical implementation of Relational database "English" would most 
+    likely be listed in multiple tables associated with the appropriate usage
+  </p>
+ </div>
+</div>
+       </div>
+     </div>
+    </div>
+    <div class="item">
+     <div class="row">
+       <div class="col-md-8 col-md-offset-2">
+          <h2>Moving English to RDF</h2>
+  <p class="lead">
+   No more tables!!!  One <strong>ID</strong> to rule them all
+  </p>
+  <p class="lead">
+    The <strong>ID</strong> becomes your <strong>URI</strong>: The <em>"Unique Resource Identifier"</em> 
+    for the concept of the <em>"English Language"</em>
+  </p>
+  <p class="lead">
+   But wait a minute??? I have five different Identifiers for English in my old system for 
+   English. No Worries&hellip;just add an alias (owl:sameAs tag)  </p>
+  <img src="/images/eng-same-as.svg">
+       </div>
+     </div>
+    </div>
+    <div class="item">
+     <div class="row">
+       <div class="col-md-8 col-md-offset-2">
+        <h2>How to describe the Usage</h2>
+<p class="lead">
+  Telling the system how to use a resource can be done by adding a 
+  RDF Type tag to your resource
 </p>
+<img src="/images/eng-rdf-type.svg">
+       </div>
+     </div>
+    </div>
+    <div class="item">
+     <div class="row">
+       <div class="col-md-8 col-md-offset-2">
+     <h2>Connecting "English" to outside resources</h2>
+<p class="lead">
+Just add another owl:sameAs tag:
+</p>
+<code>
+<pre style="font-size: 1.3em">
+&lt;http://myNameSpace.org/english&gt;
+	owl:sameAs	&lt;http://dbpedia.org/resources/English_Language&gt;,
+
+</pre>
+</code>
+       </div>
+     </div>
+    </div>
+
+  </div>
+
+  <a class="left carousel-control" href="#lang-carousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#lang-carousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
 
 
 <div class="btn-group pull-right" role="group" aria-label="...">
-  <a href="bibframe-2.0.html" 
+  <a href="rdf.html" 
      type="button" class="btn btn-warning btn-lg">
      <span class="glyphicon glyphicon-chevron-left"></span>
      Previous</a>
@@ -62,6 +161,7 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
       <li><a href="bibframe-2.0.html">BIBFRAME 2.0</a></li>
       <li class="divider"></li>
       <li>&nbsp;BIBFRAME Triplestore &amp; Search</li>
+      <li><a href="rdf.html">RDF</a></li>
       <li><a href="languages.html">Languages</a></li>
       <li><a href="identifiers.html">Identifiers</a></li>
       <li><a href="sparql.html">SPARQL Examples</a></li>
@@ -74,6 +174,7 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
   </a>
 </div>
 
+ <a class="lead" href="mailto:knowledgelinks.io@gmail.com">contact</a>
 <!-- <img src="./images/alt-logo.svg" alt="alternative logo"> -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
