--- a/presentations/niso-2015/sparql.html
+++ b/presentations/niso-2015/sparql.html
@@ -4,10 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+  <meta property="og:title" content="Implementing a BIBFRAME Catalog" />
+  <meta property="og:type" content="article" />
+  <meta property="og:article:author" content="Jeremy Nelson" />
+  <meta property="og:article:author" content="Mike Stabile" />
+  <meta property="og:article:published_time" content="2015-12-2" />
+
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>KnowledgeLinks.io 
 NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
 </title>
+    <script defer async src="//hypothes.is/embed.js"></script> 
 
     <!-- Bootstrap -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
@@ -38,6 +46,61 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
  </div>
 </div>
  
+<div id="sparql-carousel" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="sparql-carousel" data-slide-to="0" class="active"></li>
+    <li data-target="sparql-carousel" data-slide-to="1"></li>
+
+  </ol>
+
+  <div class="carousel-inner" role="listbox">
+   <div class="item active">
+     <div class="row">
+       <div class="col-md-8 col-md-offset-2">
+         <h2>Querying for a resource</h2>
+<p class="lead">
+Once resources are de-duplicated if becomes quite simple to find them. 
+Once found you get all the information about the resource regardless of usage!!!
+</p>
+<p class="lead">
+ Simple SPARQL query to find a resource and all its information regardless of URI used:
+</p>
+<code>
+<pre style="font-size: 1.2em">
+SELECT ?URI ?p ?o
+WHERE
+{
+	?URI 	owl:sameAs 	<span style="color: red;">&lt;any aliased URI&gt;</span> .
+	?URI		?p			?o
+}
+</pre>
+</code>
+
+       </div>
+     </div>
+   </div>
+   <div class="item">
+     <div class="row">
+       <div class="col-md-8 col-md-offset-2">
+         
+       </div>
+     </div>
+   </div>
+
+  </div>
+
+  <a class="left carousel-control" href="#sparql-carousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#sparql-carousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+
+</div>
+
+
 
 
 <div class="btn-group pull-right" role="group" aria-label="...">
@@ -58,6 +121,7 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
       <li><a href="bibframe-2.0.html">BIBFRAME 2.0</a></li>
       <li class="divider"></li>
       <li>&nbsp;BIBFRAME Triplestore &amp; Search</li>
+      <li><a href="rdf.html">RDF</a></li>
       <li><a href="languages.html">Languages</a></li>
       <li><a href="identifiers.html">Identifiers</a></li>
       <li><a href="sparql.html">SPARQL Examples</a></li>
@@ -70,6 +134,7 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
   </a>
 </div>
 
+ <a class="lead" href="mailto:knowledgelinks.io@gmail.com">contact</a>
 <!-- <img src="./images/alt-logo.svg" alt="alternative logo"> -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
