--- a/presentations/niso-2015/rdf.html
+++ b/presentations/niso-2015/rdf.html
@@ -134,6 +134,12 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
   
 </div>
 
+ <script>
+ $('.carousel').carousel({
+    interval: false;
+  })
+
+ </script>
 
 
 <div class="btn-group pull-right" role="group" aria-label="...">
