--- a/presentations/niso-2015/summary.html
+++ b/presentations/niso-2015/summary.html
@@ -48,6 +48,12 @@ Summary
  </div>
 </div>
  
+ <script>
+ $('.carousel').carousel({
+    interval: false;
+  })
+
+ </script>
 
 
 <div class="btn-group pull-right" role="group" aria-label="...">
