--- a/presentations/niso-2015/identifiers.html
+++ b/presentations/niso-2015/identifiers.html
@@ -49,6 +49,12 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
 
 
 
+ <script>
+ $('.carousel').carousel({
+    interval: false;
+  })
+
+ </script>
 
 
 <div class="btn-group pull-right" role="group" aria-label="...">
