--- a/presentations/niso-2015/languages.html
+++ b/presentations/niso-2015/languages.html
@@ -141,6 +141,12 @@ Just add another owl:sameAs tag:
   </a>
 </div>
 
+ <script>
+ $('.carousel').carousel({
+    interval: false;
+  })
+
+ </script>
 
 
 <div class="btn-group pull-right" role="group" aria-label="...">
