--- a/presentations/niso-2015/bibframe-2.0.html
+++ b/presentations/niso-2015/bibframe-2.0.html
@@ -38,7 +38,19 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
  
  
 <h1>BIBFRAME 2.0</h1>
-
+<p class="lead">In the fall of 2015, the Library of Congress released a series of
+ proposals for changing and updating the BIBFRAME vocabulary to version 2.0. These
+ draft proposals include:
+</p>
+ <ul class="lead">
+  <li><a href="http://www.loc.gov/bibframe/docs/pdf/bf2-draftspectitles-10-29-2015.pdf">BIBFRAME Title</a></li>
+  <li><a href="http://www.loc.gov/bibframe/docs/pdf/bf2-draftspecagentsroles-10-29-2015.pdf">BIBFRAME Agents and Roles</a></li> 
+  <li><a href="http://www.loc.gov/bibframe/docs/pdf/bf2-draftspecitems-10-29-2015.pdf">BIBFRAME Items</a></li>
+  <li><a href="http://www.loc.gov/bibframe/docs/pdf/bf2-draftspecevents-10-29-2015.pdf">BIBFRAME Events</a></li>
+  <li><a href="http://www.loc.gov/bibframe/docs/pdf/bf2-draftspecidsnotes-10-29-2015.pdf">BIBFRAME Identifiers and Notes</a></li>
+  <li><a href="http://www.loc.gov/bibframe/docs/pdf/bf2-draftspecadmin-10-29-2015.pdf">BIBFRAME Administrative Metadata</a></li>
+  <li><a href="http://www.loc.gov/bibframe/docs/pdf/bf2-draftspeccategories-10-29-2015.pdf">BIBFRAME Categories</a></li>
+ </ul>
 
 
 <div class="btn-group pull-right" role="group" aria-label="...">
@@ -61,12 +73,11 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
       <li>&nbsp;BIBFRAME Triplestore &amp; Search</li>
       <li><a href="rdf.html">RDF</a></li>
       <li><a href="languages.html">Languages</a></li>
-      <li><a href="identifiers.html">Identifiers</a></li>
       <li><a href="sparql.html">SPARQL Examples</a></li>
       <li><a href="summary.html">Summary</a></li> 
      </ul>
   </div>
-    <a href="languages.html" type="button" 
+    <a href="rdf.html" type="button" 
      class="btn btn-primary btn-lg">Next
     <span class="glyphicon glyphicon-chevron-right"></span>
   </a>
@@ -78,5 +89,16 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-70910607-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
   </body>
 </html>
