--- a/presentations/niso-2015/bibframe-overview.html
+++ b/presentations/niso-2015/bibframe-overview.html
@@ -38,7 +38,20 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
  
  
 <h1>BIBFRAME RDF Vocabulary</h1>
-
+<div class="row">
+ <section class="col-md-6">
+  <p class="lead">Started in 2011, BIBFRAME, short for <strong>Bib</strong>liographic
+  <strong>Frame</strong>work, is an RDF vocabulary and associated technologies that is sponsored
+  by the Library of Congress as an eventual replacement for MARC21. The current version (1.0) of
+  BIBFRAME is made up four main classes; Works, Instances, Authorities, and Annotations. The 
+  following graphic from the <a href="http://bibframe.org/">bibframe.org</a> shows the relationships
+  between these classes as a model for describing bibliographic resources and their relationships.</p>
+ </section>
+ <section class="col-md-6">
+  <img src="http://bibframe.org/static/images/bibframe.png">
+  <br>Source <a href="http://bibframe.org/static/images/bibframe.png">http://bibframe.org/static/images/bibframe.png"</a>
+ </section>
+</div>
 
 
 <div class="btn-group pull-right" role="group" aria-label="...">
@@ -61,7 +74,6 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
       <li>&nbsp;BIBFRAME Triplestore &amp; Search</li>
       <li><a href="rdf.html">RDF</a></li>
       <li><a href="languages.html">Languages</a></li>
-      <li><a href="identifiers.html">Identifiers</a></li>
       <li><a href="sparql.html">SPARQL Examples</a></li>
       <li><a href="summary.html">Summary</a></li> 
      </ul>
@@ -78,5 +90,16 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-70910607-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
   </body>
 </html>
