--- a/presentations/niso-2015/summary.html
+++ b/presentations/niso-2015/summary.html
@@ -48,6 +48,39 @@ Summary
  </div>
 </div>
  
+<div class="row">
+ <section class="col-md-8">
+  <div class="panel panel-success">
+   <div class="panel-body">
+    <h2>Internal Data Design Goals</h2>
+    <ul class="lead">
+     <li>Information exists once</li>
+     <li>Change to information will update everywhere</li>
+     <li>Clean, uncluttered data repository</li>
+    </ul>
+   </div>
+  </div>
+ </section>
+</div>
+<hr>
+<div class="row">
+ <section class="col-md-6">
+  <img src="http://intro2libsys.info/cc-parents-weekend-2015/static/images/cc-tiger-logo.png">
+  <h2>Colorado College Library Web Servers<br>
+   i.e. You're Website IS is your Catalog (&amp; digital repository, etc.)</h2>
+  <p class="lead"> 
+   The Colorado College library is exploring how the BIBCAT can augment the 
+   information architecture for it's current website with the intention that 
+   both our bibliographic and operational data can be embedded into the functionality 
+   and presentation of the library's resources and services.
+  <h2>
+ </section>
+ <section class="col-md-6">
+  <h2>Catalog Pull Platform</h2>
+  <img src="/images/your-catalog.svg" class="img-thumbnail">
+ </section>
+</div>
+
  <script>
  $('.carousel').carousel({
     interval: false;
@@ -57,7 +90,7 @@ Summary
 
 
 <div class="btn-group pull-right" role="group" aria-label="...">
-  <a href="identifiers.html" 
+  <a href="sparql.html" 
      type="button" class="btn btn-warning btn-lg">
      <span class="glyphicon glyphicon-chevron-left"></span>
      Previous</a>
@@ -76,7 +109,6 @@ Summary
       <li>&nbsp;BIBFRAME Triplestore &amp; Search</li>
       <li><a href="rdf.html">RDF</a></li>
       <li><a href="languages.html">Languages</a></li>
-      <li><a href="identifiers.html">Identifiers</a></li>
       <li><a href="sparql.html">SPARQL Examples</a></li>
       <li><a href="summary.html">Summary</a></li> 
      </ul>
@@ -93,5 +125,16 @@ Summary
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-70910607-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
   </body>
 </html>
