Added picture to main slide

--- a/presentations/niso-2015/index.html
+++ b/presentations/niso-2015/index.html
@@ -50,6 +50,10 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
   <section class="col-md-6">
     
     <p class="lead" itemtype="https://schema.org/Person">
+    <img src="/images/Mike-Stabile-Profile.JPG" 
+         alt="Mike Stabile" 
+         style="width: 140px;height: auto"
+         class="img-thumbnail pull-left">
     <strong itemprop="https://schema.org/name">Dr. Mike Stabile</strong><br>
     President, Knowledgelinks.io</p>
   </section>
