Turned of carousel auto rotate.

--- a/presentations/niso-2015/languages.html
+++ b/presentations/niso-2015/languages.html
@@ -46,7 +46,7 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
  </div>
 </div>
  
-<div id="lang-carousel" class="carousel slide" data-ride="carousel">
+<div id="lang-carousel" class="carousel slide" data-ride="carousel" data-interval="false">
   <ol class="carousel-indicators">
     <li data-target="lang-carousel" data-slide-to="0" class="active"></li>
     <li data-target="lang-carousel" data-slide-to="1"></li>
@@ -71,6 +71,7 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
     <li>A description of the catalog system language: <em>A comment written in english</em></li>
     <li>Primary language of an author</li>
     <li>Language of a region or country</li>
+    <li>As a classifier: <em>Library of Congress Classification</em></li>
   </ul>
   <p class="lead">
     In a classical implementation of Relational database "English" would most 
