--- a/presentations/niso-2015/rdf.html
+++ b/presentations/niso-2015/rdf.html
@@ -46,7 +46,7 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
  </div>
 </div>
  
-<div id="rdf-carousel" class="carousel slide" data-ride="carousel">
+<div id="rdf-carousel" class="carousel slide" data-ride="carousel" data-interval="false">
   <ol class="carousel-indicators">
     <li data-target="rdf-carousel" data-slide-to="0" class="active"></li>
     <li data-target="rdf-carousel" data-slide-to="1"></li>
