Added css for presentations and cleaned headers on my slides

--- a/presentations/niso-2015/sparql.html
+++ b/presentations/niso-2015/sparql.html
@@ -19,7 +19,7 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
 
     <!-- Bootstrap -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
-
+		<link rel="stylesheet" href="/css/presentations.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -35,17 +35,10 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
      style="float:left;height:100px;padding-top:5px;padding-right:10px;">
 
  <h3>KnowledgeLinks.io <small>Presentations</small></h3>
- 
- 
-<div class="row">
- <div class="col-md-8">
-  <section class="jumbotron">
+
    <h2 class="text-danger">BIBFRAME Triplestore &amp; Search</h2>
-   <h1>SPARQL Examples</h1>
-  </section>
- </div>
-</div>
- 
+<h1>SPARQL Examples</h1>
+
 <div id="sparql-carousel" class="carousel slide" data-ride="carousel" data-interval="false">
   <ol class="carousel-indicators">
     <li data-target="sparql-carousel" data-slide-to="0" class="active"></li>
