--- a/presentations/niso-2015/summary.html
+++ b/presentations/niso-2015/summary.html
@@ -35,19 +35,10 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
      style="float:left;height:100px;padding-top:5px;padding-right:10px;">
 
  <h3>KnowledgeLinks.io <small>Presentations</small></h3>
- 
- 
-<div class="row">
- <div class="col-md-8">
-  <section class="jumbotron">
-   <h2 class="text-danger">BIBFRAME Triplestore &amp; Search</h2>
-   <h1>
-Summary
-</h1>
-  </section>
- </div>
-</div>
- 
+
+   <h2 class="text-danger">Implementing a BIBFRAME Catalog</h2>
+   <h1>Summary</h1>
+
 <div class="row">
  <section class="col-md-8">
   <div class="panel panel-success">
