--- a/presentations/niso-2015/languages.html
+++ b/presentations/niso-2015/languages.html
@@ -40,7 +40,6 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
 
    <h2 class="text-danger">BIBFRAME Triplestore &amp; Search</h2>
    <h1>Languages</h1>
-
  
 <div id="lang-carousel" class="carousel slide" data-ride="carousel" data-interval="false">
   <ol class="carousel-indicators">
@@ -92,7 +91,17 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
   <p class="lead">
    But wait a minute??? I have five different Identifiers for English in my old system for 
    English. No Worries&hellip;just add an alias (owl:sameAs tag)  </p>
-  <img src="/images/eng-same-as.svg">
+  <code>
+		<pre style="font-size: 1.3em">
+&lt;http://myNameSpace.org/english&gt;
+	owl:sameAs	&lt;http://id.loc.gov/authorities/subjects/sh85043413&gt;,	
+			&lt;http://id.loc.gov/vocabulary/iso639-1/en&gt;,	
+			&lt;http://id.loc.gov/vocabulary/iso639-2/eng&gt;,	
+			&lt;http://id.loc.gov/vocabulary/languages/eng&gt;,	
+			&lt;info:lc/vocabulary/languages/eng&gt; .
+		</pre>
+</code>
+
        </div>
      </div>
     </div>
@@ -104,7 +113,16 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
   Telling the system how to use a resource can be done by adding a 
   RDF Type tag to your resource
 </p>
-<img src="/images/eng-rdf-type.svg">
+  <code>
+		<pre style="font-size: 1.3em">
+&lt;http://myNameSpace.org/english&gt;
+  rdf:type	bf:Language,
+		bf:Topic,
+		bfe:LocSubject,
+		&lt;http://id.loc.gov/vocabulary/iso639-1/iso639-1_Language&gt;,	
+		&lt;http://id.loc.gov/vocabulary/iso639-2/iso639-2_Language&gt;.
+		</pre>
+</code>
        </div>
      </div>
     </div>
@@ -118,7 +136,7 @@ Just add another owl:sameAs tag:
 <code>
 <pre style="font-size: 1.3em">
 &lt;http://myNameSpace.org/english&gt;
-	owl:sameAs	&lt;http://dbpedia.org/resources/English_Language&gt;,
+	owl:sameAs	&lt;http://dbpedia.org/resources/English_Language&gt; .
 
 </pre>
 </code>
