fixed not equals sign

--- a/presentations/niso-2015/rdf.html
+++ b/presentations/niso-2015/rdf.html
@@ -112,7 +112,7 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
    Why???
   </p>
   <ul class="lead">
-   <li>Relational database design ? RDF/Graph Database design</li>
+   <li>Relational database design <strong>&#8800;</strong> RDF/Graph Database design</li>
    <li>RDF/Graph Databases are RELATIONAL</li>
   </ul>
        </div>
