updated index photo link

--- a/presentations/niso-2015/index.html
+++ b/presentations/niso-2015/index.html
@@ -50,7 +50,7 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
   <section class="col-md-6">
     
     <p class="lead" itemtype="https://schema.org/Person">
-    <img src="/images/Mike-Stabile-Profile.JPG" 
+    <img src="/images/mike-stabile-profile.png" 
          alt="Mike Stabile" 
          style="width: 140px;height: auto"
          class="img-thumbnail pull-left">
