cleaned up css and grouping on index page

--- a/presentations/niso-2015/index.html
+++ b/presentations/niso-2015/index.html
@@ -48,26 +48,30 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
 </div>
 <div class="row">
   <section class="col-md-6">
-    
     <p class="lead" itemtype="https://schema.org/Person">
-    <img src="/images/mike-stabile-profile.png" 
-         alt="Mike Stabile" 
-         style="width: 140px;height: auto"
-         class="img-thumbnail pull-left">
-    <strong itemprop="https://schema.org/name">Dr. Mike Stabile</strong><br>
-    President, Knowledgelinks.io</p>
+	    <img src="/images/mike-stabile-profile.png" 
+	         alt="Mike Stabile" 
+	         style="width: 140px;height: auto"
+	         class="img-thumbnail pull-left">
+	    <div class="info-group">
+	    	<strong itemprop="https://schema.org/name">Dr. Mike Stabile</strong><br>
+	    	President, Knowledgelinks.io
+	    </div>
+    </p>
   </section>
   <section class="col-md-6">
     <p class="lead" itemtype="https://schema.org/Person">
-    <img src="/images/jeremy-nelson-pycon-jp-2015.png" 
-         alt="Jeremy Nelson" 
-         style="width: 140px;height: auto"
-         class="img-thumbnail pull-left">
-    <strong itemprop="https://schema.org/name">Jeremy Nelson</strong><br>
-    Metadata and Systems Librarian, Colorado College<br>
-    CIO, Knowledgelinks.io<br>
-    <a href="mailto:jeremy.nelson@coloradocollege.edu">email</a><br>
-    Twitter: <a href="https://twitter.com/jermnelson">@jermnelson</a> 
+	    <img src="/images/jeremy-nelson-pycon-jp-2015.png" 
+	         alt="Jeremy Nelson" 
+	         style="width: 140px;height: auto"
+	         class="img-thumbnail pull-left">
+	    <div class="info-group">
+	    	<strong itemprop="https://schema.org/name">Jeremy Nelson</strong><br>
+	   		Metadata and Systems Librarian, Colorado College<br>
+	    	CIO, Knowledgelinks.io<br>
+	    	<a href="mailto:jeremy.nelson@coloradocollege.edu">email</a><br>
+	    	Twitter: <a href="https://twitter.com/jermnelson">@jermnelson</a>
+	    </div>
     </p>
     
   </section>
