added icon to presentation index

--- a/presentations/niso-2015/index.html
+++ b/presentations/niso-2015/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	  <meta property="og:title" content="Implementing a BIBFRAME Catalog" />
+	  <meta property="og:type" content="article" />
+	  <meta property="og:article:author" content="Jeremy Nelson" />
+	  <meta property="og:article:author" content="Mike Stabile" />
+	  <meta property="og:article:published_time" content="2015-12-2" />
+		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+		<link rel="shortcut icon" href="/images/kl-icon.ico">
     
-  <meta property="og:title" content="Implementing a BIBFRAME Catalog" />
-  <meta property="og:type" content="article" />
-  <meta property="og:article:author" content="Jeremy Nelson" />
-  <meta property="og:article:author" content="Mike Stabile" />
-  <meta property="og:article:published_time" content="2015-12-2" />
-
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>KnowledgeLinks.io 
 NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
 </title>
