--- a/presentations/niso-2015/index.html
+++ b/presentations/niso-2015/index.html
@@ -10,7 +10,7 @@
 	  <meta property="og:article:author" content="Mike Stabile" />
 	  <meta property="og:article:published_time" content="2015-12-2" />
 		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-		<link rel="shortcut icon" href="/images/kl-icon.ico">
+		<link rel="icon" href="/images/favicon.ico">
     
     <title>KnowledgeLinks.io 
 NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
