--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
      style="float:left;height:100px;padding-top:5px;padding-right:10px;">
 
 <h1>KnowledgeLinks.io <small><a href="mailto:knowledgelinks.io@gmail.com">email</a></small></h1>
-
+<div class="row">
+ <section class="col-md-12 pull-left">
+  <div class="well">
+  	<ul>
+   		<li><a href="/presentations">Presentations</a></li>
+  </ul>
+  </div>
+ </section>
+</div>
 <!-- <img src="./images/alt-logo.svg" alt="alternative logo"> -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
