updated slides again ...

--- a/presentations/niso-2015/languages.html
+++ b/presentations/niso-2015/languages.html
@@ -63,10 +63,11 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
   <ul class="lead">
     <li>as a Subject/Topic: <em>A book written about the English Language</em></li>
     <li>the Language of production: <em>A book written in english</em></li>
-    <li>A description of the catalog system language: <em>A comment written in english</em></li>
-    <li>Primary language of an author</li>
+    <li>A language tag for a catalog system entry: <em>A comment written in english</em></li>
+    <li>An author's native tongue</li>
     <li>Language of a region or country</li>
     <li>As a classifier: <em>Library of Congress Classification</em></li>
+    <li>etc ...</li>
   </ul>
   <p class="lead">
     In a classical implementation of Relational database "English" would most 
