--- a/presentations/niso-2015/sparql.html
+++ b/presentations/niso-2015/sparql.html
@@ -56,7 +56,7 @@ Once resources are de-duplicated if becomes quite simple to find them.
 Once found you get all the information about the resource regardless of usage!!!
 </p>
 <p class="lead">
- Simple SPARQL query to find a resource and all its information regardless of URI used:
+A simple SPARQL query to find a resource and all of its information regardless of URI used:
 </p>
 <code>
 &lt;http://id.loc.gov/authorities/subjects/sh85043413&gt;  --Insert into the query below
@@ -84,13 +84,13 @@ Returns-- &lt;http://myNameSpace.org/english&gt; ?p ?o
          <h2>Listing all resources of a specific type</h2>
 <p class="lead">
 Using the "English Language" example. Where english is both a <strong>Subject</strong> 
-and a <strong>Language</strong>. It doesn't matter the main URI isn't in the Subject format 
+and a <strong>Language</strong>. It doesn't matter that the main URI isn't in the "Subject" format. 
 </p>
 <code>
 &lt;http://id.loc.gov/authorities/subjects/sh85043413&gt;
 </code>
 <p class="lead">
-Simple SPARQL query to find all subjects resources would still return the proper URI:
+A simple SPARQL query to find all subject resources would return the main URI:
 </p>
 <code>
 <pre style="font-size: 1.3em;" >
