--- a/presentations/niso-2015/languages.html
+++ b/presentations/niso-2015/languages.html
@@ -70,8 +70,8 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
     <li>etc ...</li>
   </ul>
   <p class="lead">
-    In a classical implementation of Relational database "English" would most 
-    likely be listed in multiple tables associated with the appropriate usage
+    In a common implementation of a SQL/relational database "English" would most 
+    likely be listed in multiple tables according to its usage.
   </p>
  </div>
 </div>
