Added book plug for BLL

--- a/presentations/niso-2015/summary.html
+++ b/presentations/niso-2015/summary.html
@@ -71,7 +71,25 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
   <img src="/images/your-catalog.svg" class="img-thumbnail">
  </section>
 </div>
-
+<hr>
+<div class="row">
+ <section class="col-md-4 col-md-offset-2">
+  <a href="http://becomingleanlibrary.com">
+   <img src="/images/becoming-lean-library.jpg">
+  </a>
+ </section>
+ <section class="col-md-4">
+  <p class="lead">
+   Approaching Linked-Data from the producer end, we are implementing
+   a semantic-server backend for Jeremy Nelson's book
+   - <a href="http://becomingleanlibrary.com"><em>Becoming a Lean 
+   Library: Lessons from Technology Startups</em></a>- being 
+   published by Chandos to drive reader engagement through earning Open Badges
+   on the material as well as the definitive source for linked-data about
+   the title.
+  </p>
+ </section>
+</div>
  <script>
  $('.carousel').carousel({
     interval: false;
