--- a/presentations/niso-2015/rdf.html
+++ b/presentations/niso-2015/rdf.html
@@ -72,7 +72,7 @@ NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool
     <p class="lead">Answer??? They are <strong>Very</strong> important&hellip;and 
      <strong>Not</strong> as important as we make them out to be.</p>
     <ul class="lead">
-     <li>They are primary tool to allow for a machine readable description of the data</li>
+     <li>They are the primary tool to allow for a machine readable description of the data</li>
      <li>Not as important as we make them to be??? Why not?
        <ul class="lead">
         <li>They are a data tool</li>
