--- a/navigation.html
+++ b/navigation.html
@@ -9,14 +9,14 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/">
-    	<img src="/images/alt-logo.svg"></img>
+    	<img src="/images/kl-logo2.png"></img>KnowledgeLinks.io
       </a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li>KnowledgeLinks.io</li>
+        <li><a href="/">KnowledgeLinks.io</a></li>
         <li><a href="#">Link</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
