--- a/navigation.html
+++ b/navigation.html
@@ -8,8 +8,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" style="" href="/">
-    	<img src="/images/alt-logo.svg" style="">
+      <a class="navbar-brand" style="padding-top:0px;
+      								 padding-bottom:0px;
+      								 margin-top:0px;
+      								 margin-bottom:0px;" href="/">
+    	<img src="/images/alt-logo.svg" style="height:47px">
       </a>
     </div>
 
@@ -17,10 +20,10 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="/">KnowledgeLinks.io</a></li>
-        <li><a href="/presentations/">Presentations</a></li>
         <li class="dropdown">
           <a href="/presentations/" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Presentations <span class="caret"></span></a>
           <ul class="dropdown-menu">
+          	<li><a href="/presentations/">All Presentations</a></li>
             <li><a href="/presentations/niso-2015/index.html">NISO - The Semantic Web: What's New and Cool</a></li>
           </ul>
         </li>
