--- a/presentations/index.html
+++ b/presentations/index.html
@@ -19,15 +19,16 @@
     <![endif]-->
   </head>
   <body class="container">
+	<div id="kl-nav"></div>
+	<ul class="lead">
+	  <li><a href="niso-2015/index.html">NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool</a></li>
+	</ul>
 
-<ul class="lead">
-  <li><a href="niso-2015/index.html">NISO/NFAIS Virtual Conference - The Semantic Web: What's New and Cool</a></li>
-</ul>
-<!-- <img src="./images/alt-logo.svg" alt="alternative logo"> -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
- <script src="/js/navigation.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-url-parser/2.3.1/purl.min.js"></script>
+ 	<script src="/js/navigation.js"></script>
   </body>
 </html>
