--- a/vocabulary/index.html
+++ b/vocabulary/index.html
@@ -24,15 +24,13 @@
  <section class="col-md-12 pull-left">
   <div class="well">
   	<h1> KnowledgeLinks.io's RDF based application framework vocabulary</h1>
-  	<pre>@prefix acl: <http://www.w3.org/ns/auth/acl#> .
-@prefix foaf: <http://xmlns.com/foaf/0.1/> .
-@prefix kds: <http://knowledgelinks.io/ns/data-structures/> .
-@prefix kdr: <http://knowledgelinks.io/ns/data-resources/> .
-@prefix obi: <https://w3id.org/openbadges#> .
-@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
-@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
-@prefix schema: <https://schema.org/> .
-@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
+  	<pre>
+@prefix acl: &lt;http://www.w3.org/ns/auth/acl#&gt; .
+@prefix kds: &lt;http://knowledgelinks.io/ns/data-structures/&gt; .
+@prefix kdr: &lt;http://knowledgelinks.io/ns/data-resources/&gt; .
+@prefix rdf: &lt;http://www.w3.org/1999/02/22-rdf-syntax-ns#&gt; .
+@prefix rdfs: &lt;http://www.w3.org/2000/01/rdf-schema#&gt; .
+@prefix xsd: &lt;http://www.w3.org/2001/XMLSchema#&gt; .
 
 kds:FormClass a rdf:Class;	
 	rdfs:subClassOf	rdf:Class;
