--- a/navigation.html
+++ b/navigation.html
@@ -26,7 +26,14 @@
           	<li><a href="/presentations/">All Presentations</a></li>
             <li><a href="/presentations/niso-2015/index.html">NISO - The Semantic Web: What's New and Cool</a></li>
           </ul>
-        </li> 
+        </li>
+        <li class="dropdown">
+          <a href="/products/" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Presentations <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+          	<li><a href="/products/">All Products</a></li>
+            <li><a href="/products/rdfframework/html/index.htm">RdfFramework</a></li>
+          </ul>
+        </li>  
       </ul>	
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
