--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body class="container">
+  <body>
 <!-- <img style="float:left;height:64px;padding-top:5px;padding-right:10px;" src="./images/KL-logo-blue.png">   --> 
 <div id="kl-nav"></div>
 <div class="row">
