--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <div id="kl-nav"></div>
 <div class="main">
     <div class="container tim-container" style="max-width:800px; padding-top:100px">
+   	<img src="/images/alt-logo.svg">
   	<ul>
    		<li><a href="/presentations">Presentations</a></li>
   	</ul>
