--- a/index.html
+++ b/index.html
@@ -27,11 +27,23 @@
 <!-- <img style="float:left;height:64px;padding-top:5px;padding-right:10px;" src="./images/KL-logo-blue.png">   --> 
 <div id="kl-nav"></div>
 <div class="main">
-    <div class="container tim-container" style="max-width:800px; padding-top:100px">
-   	<img src="/images/alt-logo.svg">
-  	<ul>
-   		<li><a href="/presentations">Presentations</a></li>
-  	</ul>
+	<div class="container tim-container" style="max-width:800px; padding-top:100px">
+		<div class="col-md-2">
+			<img src="/images/alt-logo.svg">
+		</div>
+		<div class="col-md-10"> 
+		<h1 style="font-size: 6em; margin-botton: 0">KnowledgeLinks.io</h1>
+		<h2>Developing integrated RDF solutions</h2>
+			<p class="lead">
+				We are committed to developing RDF applications designed to take libraries to the next era. 
+			</p>
+		</div>
+    
+     	<hr>
+   	
+	  	<ul>
+	   		<li><a href="/presentations">Presentations</a></li>
+	  	</ul>
 	</div>
     <div class="space"></div>
 <!-- end container -->
