--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div class="main">
 	<div class="container tim-container" style="max-width:800px; padding-top:100px">
 		<div class="col-md-2">
-			<img src="/images/alt-logo.svg">
+			<img src="/images/kl-logo.svg">
 		</div>
 		<div class="col-md-10"> 
 		<h1 style="font-size: 6em; margin-botton: 0">KnowledgeLinks.io</h1>
