--- a/index.html
+++ b/index.html
@@ -28,16 +28,18 @@
 <!-- <img style="float:left;height:64px;padding-top:5px;padding-right:10px;" src="./images/KL-logo-blue.png">   --> 
 <div id="kl-nav"></div>
 <div class="main">
-	<div class="container tim-container col-md-12">
-		<div class="col-md-2">
-			<img src="/images/kl-logo.svg" style="height:192px">
-		</div>
-		<div class="col-md-10"> 
-		<h1 style="font-size: 6em; margin-botton: 0">KnowledgeLinks.io</h1>
-		<h2>Developing integrated RDF solutions</h2>
-			<p class="lead">
-				We are committed to developing RDF applications designed to take libraries to the next era. 
-			</p>
+	<div class="container tim-container">
+		<div class="row">
+			<div class="col-md-2">
+				<img src="/images/kl-logo.svg" style="height:192px">
+			</div>
+			<div class="col-md-10"> 
+			<h1 style="font-size: 6em; margin-botton: 0">KnowledgeLinks.io</h1>
+			<h2>Developing integrated RDF solutions</h2>
+				<p class="lead">
+					We are committed to developing RDF applications designed to take libraries to the next era. 
+				</p>
+			</div>
 		</div>
     
      	<hr>
